Closed Bug 399133 Opened 18 years ago Closed 18 years ago

svg feColorMatrix in saturation mode has a math error on the blue channel

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: drewp, Assigned: longsonr)

Details

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.3) Gecko/20070309 Firefox/2.0.0.3 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a9pre) Gecko/2007100704 Minefield/3.0a9pre http://lxr.mozilla.org/seamonkey/source/content/svg/content/src/nsSVGFilters.cpp#1346 looks wrong: 1346 colorMatrix[12] = 0.715f - 0.715f * s; I think that should be 0.072+0.928s according to http://www.w3.org/TR/SVG11/filters.html#feColorMatrix The error result is that saturate with values="1" looks way yellow, and values="0" looks somewhat blue. Here a screenshot of values="0" in minefield 3.0a9pre 2007100704: http://bigasterisk.com/post/bugzilla363909-compare.jpg (The lower image is in batik and looks right to me) Reproducible: Always Steps to Reproduce: 1. 2. 3. I initially put this as a note at https://bugzilla.mozilla.org/show_bug.cgi?id=363909#c13
Status: UNCONFIRMED → NEW
Component: General → SVG
Ever confirmed: true
Product: Firefox → Core
Could you attach the svg file you used to generate the jpg please so that we have a testcase.
Assignee: nobody → longsonr
OS: Linux → All
Hardware: PC → All
Attached image test case- three saturation levels (obsolete) —
Attached patch patchSplinter Review
Attachment #284127 - Flags: review?(tor)
Attachment #284126 - Attachment is obsolete: true
With the patch the output looks like the batik version.
QA Contact: general → general
Attachment #284127 - Flags: superreview+
Attachment #284127 - Flags: review?(tor)
Attachment #284127 - Flags: review+
Attachment #284127 - Flags: approval1.9+
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: