Bug 399133 - invalid blue channel in feColorMatrix in saturation mode. r+sr+a=tor